fixed width of button on small screen size

--- a/docs/style.css
+++ b/docs/style.css
@@ -51,7 +51,8 @@
                 padding: 15px;
             }
             .cta-button {
-                width: 100%;
+                display: block;
+                width: auto;
                 text-align: center;
             }
         }
